Дьявольская куча изменений

--- a/style.css
+++ b/style.css
@@ -2,8 +2,55 @@
   display: flex; /* Это свойство позволяет создать flex-контейнер */
   flex-direction: row; /* Определяет направление главной оси */
   flex-wrap: wrap; /* Позволяет элементам переноситься на новую строку */
-  align-items: center; /* Выравнивание элементов по поперечной оси */
+  align-items: right; /* Выравнивание элементов по поперечной оси */
   justify-content: space-between; /* Распределяет элементы по главной оси */
-  gap: 100px; /* Задает расстояние между элементами  */
-  height: 100vh; /* Задает высоту контейнера на весь экран */
+  gap: 5px; /* Задает расстояние между элементами  */
+  height: 20vh; /* Задает высоту контейнера на весь экран */
+  border: 2px solid rgb(97, 7, 7); /* Задает рамку вокруг контейнера */
+  align-items: center; /* Выравнивание элементов по центру */
+  border: 1px solid rgb(0, 0, 0); /* Задает рамку вокруг секции */
+  height: 90%;
+  padding: 5px; /* Задает отступы вокруг контейнера */
+
+}
+  section > img {
+  height: 100px; /* Задает высоту изображений */
+}
+.sectheme {
+  border: 1px dashed rgb(0, 0, 0); /* Задает рамку вокруг секции */
+  padding: 10px; /* Задает отступы внутри секции */
+}
+div {
+  margin: 5px; /* Задает отступы вокруг каждого элемента */
+  padding: 5px; /* Задает отступы внутри каждого элемента */
+}
+div > .photo {
+  width: 30%; /* Задает ширину изображений */
+  object-fit: cover; /* Позволяет изображению сохранять пропорции */
+}
+.info {
+  width: 68%; /* Задает ширину текстовой части */
+  padding: 10px; /* Задает отступы внутри текстовой части */
+  text-align: center; /* Выравнивание текста по центру */
+}
+.information {
+  display: flex; /* Создает flex-контейнер для информации */
+  justify-content: center; /* Выравнивание элементов по центру */
+  gap: 10px; /* Задает расстояние между элементами */
+  padding: 10px; /* Задает отступы внутри информационной секции */
+}
+footer {
+  text-align: center; /* Выравнивание текста в футере по центру */
+  padding: 10px; /* Задает отступы внутри футера */
+  background-color: rgb(4, 2, 90); /* Задает цвет фона футера */
+  color: white; /* Задает цвет текста в футере */
+  position: relative; /* Позволяет позиционировать элементы внутри футера */
+}
+.formaction{
+  flex: 1; /* Позволяет элементам занимать равное пространство */
+  text-align: center; /* Выравнивание текста по центру */
+  padding: 5px; /* Задает отступы внутри каждого элемента информации */
+  flex-direction: column; /* Устанавливает направление элементов внутри flex-контейнера */
+  display: flex; /* Создает flex-контейнер для элементов информации */
+  margin: 10px; /* Задает отступы вокруг каждого элемента информации */
 }
